[package]
name = "async-gui-native"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
authors = ["John Nunley <jtnunley01@gmail.com>"]
description = "A library for creating GUIs with async/await"

[dependencies]
async-gui = { version = "0.0.1", path = ".." }
gui-tools = { path = "../gui-tools", version = "0.0.1", default-features = false }
sunder = { version = "0.1.0", path = "../sunder", features = ["piet"] }

[dev-dependencies]
gui-tools = { path = "../gui-tools", default-features = false, features = ["x11", "egl", "glx", "wgl"] }
